--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
 rand = "0.8.5"
 reqwest = { version = "0.11.13", features = ["blocking"] }
 tokio = { version = "1", features = ["full"] }
 derive_builder = "0.12.0"
 futures = "0.3.25"
+sha1 = "0.10.5"
+hmac = "0.12.1"
+base64 = "0.21.0"
