--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,19 @@
 [package]
 name = "yubi_opt"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "yubiopt"
+path = "src/lib.rs"
+doc = true
+test = true
+bench = false
 
 [dependencies]
 rand = "0.8.5"
-reqwest = { version = "0.11.13", features = ["blocking"] }
-tokio = { version = "1", features = ["full"] }
+ureq = "2.6.2"
 derive_builder = "0.12.0"
-futures = "0.3.25"
 sha1 = "0.10.5"
 hmac = "0.12.1"
 base64 = "0.21.0"
