--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "yubi_opt"
 version = "0.1.0"
 edition = "2018"
+homepage = "https://github.com/Alex1607/yubico_otp"
+readme = "README.md"
+description = "An easy to use Yubico OTPs implementation."
+license = "MIT OR Apache-2.0"
 
 [lib]
 name = "yubiopt"
